# policybench

./: .gitignore  .vercelignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  RESULTS.md  pyproject.toml  tmp9wmiy2qk.html  vercel.json
.claude/: launch.json
app/: .gitignore  .vercelignore  eslint.config.mjs  package.json  tsconfig.json  vercel.json
benchmark_results/: benchmark_output.csv
docs/: artifacts.md  audit.md  benchmark_card.md  discussion.md  index.md  introduction.md  methodology.md  myst.yml  paper.md  references.md  results.md  runbook.md  runstore.md  site_improvements_scope.md
paper/: .gitignore  README.md  _quarto.yml  generate_figures.py  index.qmd  pe-tokens.css  references.bib  render_paper.py
policybench/: __init__.py  analysis.py  annotation_taxonomy.py  annotation_validation.py  audit.py  batch_eval.py  benchmark_specs.json  cache.py  case_annotations.py  case_reference_explanations.py  cell_deviation_audits.py  chunked_eval.py  cli.py  config.py  dashboard_schema.py  eval_no_tools.py  fold_board.py  full_run_export.py  ground_truth.py  households.py  llm_estimator.py  main.py  model_cards.py  onboard.py  paper_results.py  policyengine_api.py  policyengine_runtime.py  population_weights.json  population_weights.py  prompt_mode_comparison.py  prompts.py  provenance.py  publish_dashboard.py  reparse_predictions.py  retry_eval.py  row_repair.py  runstore.py  scenarios.py  scorer_vectors.py  spec.py  (+1 more)
results/: ground_truth.csv  scenarios.csv  scenarios_20260327.csv
scripts/: compare_prompt_modes.py  export_full_run.py  export_paper_artifacts.py  freeze_snapshot.py  run_audit_codex.sh  run_diagnostics.py  run_full_model_chunks.py  run_grok_diagnostic_backfill.py  run_saved_manifest_eval.py
tests/: conftest.py  test_analysis.py  test_annotation_taxonomy.py  test_audit.py  test_batch_eval.py  test_cell_deviation_audits.py  test_chunked_eval.py  test_cli_helpers.py  test_cli_reference_outputs.py  test_cli_scorer_vectors.py  test_cost_latency.py  test_dashboard_schema.py  test_eval_no_tools.py  test_export_full_run.py  test_fold_board.py  (+22 more)
(+306 files in other folders)
