[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policybench"
version = "2.0.0"
description = "Benchmark: can AI models calculate tax/benefit outcomes without tools?"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "PolicyEngine", email = "hello@policyengine.org"}]
requires-python = ">=3.10"
dependencies = [
    "litellm[caching]>=1.30",
    "policyengine-us>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
docs = [
    "jupyter-book>=2.0",
]

[project.scripts]
policybench = "policybench.cli:main"

[tool.setuptools.packages.find]
include = ["policybench*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
